[metadata]
name = recgov
version = attr: recgov.__version__
description = A library to facilitate querying data from recreation.gov
long_description = file: README.md, LICENSE.txt, CHANGELOG.md
long_description_content_type = text/markdown
keywords = api, recreation
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = recgov
install_requires =
    requests
    python-dateutil
    fake_useragent
